feat: Add location services and screens for manual location selection, update profile and scan result screens to integrate location features

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   # Utilities
   share_plus: ^10.1.4
   permission_handler: ^11.3.1
+  geolocator: ^14.0.2
 
 dev_dependencies:
   flutter_test:
