--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   share_plus: ^10.1.4
   permission_handler: ^11.3.1
   geolocator: ^14.0.2
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
