--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   permission_handler: ^11.3.1
   geolocator: ^14.0.2
   path: ^1.9.1
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
